tests/types/errors/emit_field_type.mochi
stream Sensor { id: string }

emit Sensor { id: 123 }
